# testops-mirror

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/example/Transfers/Negative/: TC-2301-transfer-to-blocked-account.md
src/testops_mirror/: __init__.py  cli.py  exceptions.py  gitstore.py  models.py  serializer.py  sync.py
src/testops_mirror/connectors/: __init__.py  allure_testops.py  base.py
tests/: test_allure_connector.py  test_exceptions.py  test_gitstore.py  test_serializer.py  test_sync.py
tests/fixtures/: auth_response.json  testcase_detail.json  testcase_list.json  testcase_steps.json
