[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testops-mirror"
version = "0.1.1"
description = "Mirror test cases from any TMS into a Git repository as Markdown files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "testops-mirror contributors" }]
keywords = ["testing", "tms", "allure", "testops", "git", "mirror", "test-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
    "typer>=0.12",
    "GitPython>=3.1",
    "PyYAML>=6",
    "python-dotenv>=1.0",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/exzist-qa/testops-mirror"
Repository = "https://github.com/exzist-qa/testops-mirror"
Issues = "https://github.com/exzist-qa/testops-mirror/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
testops-mirror = "testops_mirror.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/testops_mirror"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PTH", "RUF"]
ignore = ["B008", "RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/testops_mirror"]
